--- a/src/app/CORE/navbar/navbar.component.html
+++ b/src/app/CORE/navbar/navbar.component.html
@@ -1,3 +1,31 @@
-<p>
-  navbar works!
-</p>
+<div class="sidenav">
+  <ul class="nav nav-pills">
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/home']" routerLinkActive="router-link-active" >Početna strana<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/committees']" routerLinkActive="router-link-active" >Komitet <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/dates']" routerLinkActive="router-link-active" >Važni datumi <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/registration']" routerLinkActive="router-link-active" >Prijava <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/fee']" routerLinkActive="router-link-active" >Kotizacija <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/accomodation']" routerLinkActive="router-link-active" >Smeštaj <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/agenda']" routerLinkActive="router-link-active" >Agenda <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/novisad']" routerLinkActive="router-link-active" >O Novom Sadu <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#" [routerLink]="['/contact']" routerLinkActive="router-link-active" >Kontakt <span class="sr-only">(current)</span></a>
+    </li>
+  </ul>
+</div>
