--- a/src/app/CORE/header/header.component.html
+++ b/src/app/CORE/header/header.component.html
@@ -1,3 +1,31 @@
-<p>
-  header works!
-</p>
+<div class="row">
+  <ngb-carousel>
+    <ng-template ngbSlide>
+      <div class="row">
+        <img class="opacity" src="../../../assets/Images/PMF-Amfiteatar.jpg" alt="conference">
+        <img class="natural" src="../../../assets/Images/PMF-Amfiteatar.jpg" alt="conference">
+        <div class="carousel-caption">
+          <p>Kongres mladih matematičara u Novom Sadu</p>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="row">
+        <img class="opacity" src="../../../assets/Images/NS-Danube.jpg" alt="conference">
+        <img class="natural" src="../../../assets/Images/NS-Danube.jpg" alt="conference">
+        <div class="carousel-caption">
+          <p>Kongres mladih matematičara u Novom Sadu</p>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="row">
+        <img class="opacity" src="../../../assets/Images/UNS-Campus-2.jpg" alt="conference">
+        <img class="natural" src="../../../assets/Images/UNS-Campus-2.jpg" alt="conference">
+        <div class="carousel-caption">
+          <p>Kongres mladih matematičara u Novom Sadu</p>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+</div>
