--- a/src/app/CORE/footer/footer.component.html
+++ b/src/app/CORE/footer/footer.component.html
@@ -1,3 +1,21 @@
-<p>
-  footer works!
-</p>
+<footer id="footer">
+  <div>
+    <a href="#"><img src="../../../assets/Images/Twitter-Logo.png" alt="Twitter-Logo srcset" class="social"></a>
+    <a href="#"><img src="../../../assets/Images/instagram.png" alt="instagram" class="social"></a>
+    <a href="#"><img src="../../../assets/Images/linkedIn.png" alt="linkedin" class="social"></a>
+    <a href="#"><img src="../../../assets/Images/facebook.png" alt="facebook" class="social"></a>
+    <a href="#"><img src="../../../assets/Images/youtube.jpeg" alt="youtube" class="social"></a>
+  </div>
+
+  <ul>
+    <li><a href="#" [routerLink]="['/conditions']" routerLinkActive="router-link-active">Uslovi korišćenja</a></li>
+    <li><a href="#" [routerLink]="['/privacy']" routerLinkActive="router-link-active">Politika privatnosti</a></li>
+    <li><a href="#">Kolačići</a></li>
+    <li><a href="#">NPP</a></li>
+  </ul>
+
+  <div class="copy">
+    &copy; СНМД, 2019., by Биљана Недељков моб. +381 60-459-08-50
+  </div>
+
+</footer>
