--- a/src/app/CORE/navbar/navbar.component.css
+++ b/src/app/CORE/navbar/navbar.component.css
@@ -5,7 +5,7 @@
 
 li {
   width: 100%;
-  background-color: #3973ac;
+  background-color: #264d73;
   border-radius: 4%;
   margin: 1px;
   padding: 5px;
