Zavrsena committees komponenta

--- a/src/app/CORE/footer/footer.component.html
+++ b/src/app/CORE/footer/footer.component.html
@@ -4,11 +4,11 @@
     <a href="#"><img src="../../../assets/Images/instagram.png" alt="instagram" class="social"></a>
     <a href="#"><img src="../../../assets/Images/linkedIn.png" alt="linkedin" class="social"></a>
     <a href="#"><img src="../../../assets/Images/facebook.png" alt="facebook" class="social"></a>
-    <a href="#"><img src="../../../assets/Images/youtube.jpeg" alt="youtube" class="social"></a>
+    <a href="#"><img src="../../../assets/Images/youtube.jpg" alt="youtube" class="social"></a>
   </div>
 
   <ul>
-    <li><a href="#" [routerLink]="['/conditions']" routerLinkActive="router-link-active">Uslovi korišćenja</a></li>
+    <li><a href="#" [routerLink]="['/terms']" routerLinkActive="router-link-active">Uslovi korišćenja</a></li>
     <li><a href="#" [routerLink]="['/privacy']" routerLinkActive="router-link-active">Politika privatnosti</a></li>
     <li><a href="#">Kolačići</a></li>
     <li><a href="#">NPP</a></li>
