--- a/src/app/CORE/header/header.component.html
+++ b/src/app/CORE/header/header.component.html
@@ -5,7 +5,7 @@
         <img class="opacity" src="../../../assets/Images/PMF-Amfiteatar.jpg" alt="conference">
         <img class="natural" src="../../../assets/Images/PMF-Amfiteatar.jpg" alt="conference">
         <div class="carousel-caption">
-          <p>Kongres mladih matematičara u Novom Sadu</p>
+          <p><b>Kongres mladih matematičara u Novom Sadu</b></p>
         </div>
       </div>
     </ng-template>
