--- a/src/app/CORE/navbar/navbar.component.html
+++ b/src/app/CORE/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link" href="#" [routerLink]="['/home']" routerLinkActive="router-link-active" >Početna strana<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="#" [routerLink]="['/committees']" routerLinkActive="router-link-active" >Komitet <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="#" [routerLink]="['/committees']" routerLinkActive="router-link-active" >Organizacija konferencije <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="#" [routerLink]="['/dates']" routerLinkActive="router-link-active" >Važni datumi <span class="sr-only">(current)</span></a>
