--- a/src/app/KMMNS/committees/committees.component.html
+++ b/src/app/KMMNS/committees/committees.component.html
@@ -1,3 +1,48 @@
-<p>
-  committees works!
-</p>
+<div class="container-fluid">
+  <h1>Organizacija konferencije</h1>
+  <h2>Predsednici organizacionog odbora</h2>
+    <div class="presidents">
+    <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
+      ngbPopover="email: nenad.teofanov@dmi.uns.ac.rs" popoverTitle="Prirodno-matematički fakultet, Novi Sad">
+      <h4>Dr Teofanov Nenad, redovni profesor</h4>
+    </button>
+    <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
+      ngbPopover="email: dexterofnis@gmail.com" popoverTitle="Prirodno-matematički fakultet, Niš">
+      <h4>Dr Petković Marko, redovni profesor</h4>
+    </button>
+  </div>
+  <h2>Organizacioni odbor</h2>
+    <div class="organization">
+    <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
+      ngbPopover="stručni saradnik za promociju i transfer znanja,  email: biljanaSANU1003@turing.mi.sanu.ac.rs  "
+      popoverTitle="Matematički Institut, Beograd">
+      <h4>BSc Biljana Nedeljkov</h4>
+    </button>
+    <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
+      ngbPopover="email: djurdjev.ivana@gmail.com" popoverTitle="Matematički Institut, Beograd">
+     <h4> MSc Đurđev Ivana</h4>
+    </button>
+    <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
+      ngbPopover="email: danijela.mitrovic@dmi.uns.ac.rs" popoverTitle="Matematički Institut, Beograd">
+     <h4> MSc Mitrović Danijela</h4>
+    </button>
+  </div>
+  <div class="program">
+    <h2>Programski odbor</h2>
+    <nav>
+    <ul>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Pilipović Stevan, akademik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Milovanović Gradimir, akademik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Đorđević Dragan, redovni profesor</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Mateljević Miodrag, redovni profesor</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Nedeljkov Marko, redovni profesor</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Ognjanović Zoran, naučni savetnik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Krejić Nataša, redovni profesor</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Dolićanin Ćemal, akademik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Marković Zoran, naučni savetnik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Marija Stanić, vanredni profesor</li>
+    </ul>
+  </nav>
+  </div>
+
+</div>
