--- a/src/app/KMMNS/dates/dates.component.html
+++ b/src/app/KMMNS/dates/dates.component.html
@@ -1,3 +1,5 @@
-<p>
-  dates works!
-</p>
+<div class="container-fluid">
+  <h1>Važni datumi</h1>
+  <h5>30.Jul 2019. - Krajnji rok za prijavu.</h5>
+  <h5>31.Avgust 2019. - Krajnji rok za dostavljanje rada.</h5>
+</div>
