--- a/src/app/KMMNS/home/home.component.html
+++ b/src/app/KMMNS/home/home.component.html
@@ -13,6 +13,6 @@
     Konferencija će biti organizovana na  <b>Departmanu za matematiku i informatiku,Prirodno-matematičkog fakulteta u Novom Sadu.</b>
   </p>
   <p>
-    Registracija na konferenciju je obavezna, ali se ne naplaćuje.
+    Registracija za konferenciju je obavezna, ali se ne naplaćuje.
   </p>
 </div>
