--- a/src/app/KMMNS/home/home.component.css
+++ b/src/app/KMMNS/home/home.component.css
@@ -2,6 +2,7 @@
 padding: 2em;
 color: #264d73;
 
+
 }
 .logo>img{
     width: 70px;
@@ -15,4 +16,7 @@ color: #264d73;
 p{
     font-size: 1.4em;
     padding-top: 1em;
+}
+i{
+    font-family: 'Roboto Slab', serif;
 }
