Zavrsena agenda komponenta

--- a/src/app/KMMNS/accommodation/accommodation.component.html
+++ b/src/app/KMMNS/accommodation/accommodation.component.html
@@ -1,3 +1,8 @@
-<p>
-  accommodation works!
-</p>
+<div class="container-fluid">
+  <h1>Smeštaj</h1>
+  <h4>Za ograničeni broj učesnika konferencije, obezbedili smo besplatan smeštaj.<br>
+  U prijavi je neophodno da navedete broj noćenja i izaberete datume za koje ste zainteresovani.<br>
+  Više informacija o samom smeštaju biće objavljeno kada se bude znao tačan broj učesnika.<br>
+  Za sva dodanta pitanja možete kontaktirati članove organizacionog odbora.
+  </h4>
+</div>
