--- a/src/app/KMMNS/registration/registration.component.html
+++ b/src/app/KMMNS/registration/registration.component.html
@@ -1,3 +1,11 @@
 <div class="container-fluid">
   <h1>Prijava</h1>
+  <h4>Prijava na konferenciju je obavezna, ali se ne naplaćuje.<br>
+    Rasporedom je predviđeno da svako izlaganje traje oko 20 minuta.<br><br>
+  Prijave i dostava apstrakata za učesnike konferencije vrši se klikom na dugme ispod : 
+  </h4>
+  <div class="button">
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNgFgeD0tvmEIr1ZekbrwEPndyE58N2ImYE4zXkw0ZaSDP0w/viewform?usp=pp_url"><button class="btn btn-primary">Prijavi se!</button></a> 
+</div>
+
 </div>
