--- a/src/app/KMMNS/agenda/agenda.component.html
+++ b/src/app/KMMNS/agenda/agenda.component.html
@@ -1,3 +1,20 @@
-<p>
-  agenda works!
-</p>
+<div class="container-fluid">
+  <h1>Agenda - Program rada</h1>
+  <i class="fa fa-angle-double-right" aria-hidden="true"> <b> 03.Oktobar 2019.</b></i>
+  <ul>
+    <li> registracija učesnika od 12h na Departmanu za matematiku i informatiku, Prirodno-matematičkog fakulteta u Novom Sadu.</li>
+    <li> od 18h svečana večera</li>
+  </ul>
+  <i class="fa fa-angle-double-right" aria-hidden="true"> <b> 04.Oktobar 2019.</b> </i>
+  <ul>
+    <li> Otvaranje konferencije u 9h i početak rada.</li>
+    <li> Celodnevna izlaganja učesnika sa pauzom za ručak. Obezbeđen ketering.</li>
+  </ul>
+  <i class="fa fa-angle-double-right" aria-hidden="true"> <b> 05.Oktobar 2019.</b> </i>
+  <ul>
+    <li> Od 9h sumiranje utisaka i završna reč organizatora.</li>
+    <li> Zatvaranje konferencije u popodnevnim satima.</li>
+  </ul><br><br>
+<h5>Tačna satnica i raspored izlaganja biće naknadno saopšteni.</h5>
+
+</div>
