--- a/src/app/KMMNS/dates/dates.component.html
+++ b/src/app/KMMNS/dates/dates.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
   <h1>Važni datumi</h1>
-  <h5>30.Jul 2019. - Krajnji rok za prijavu.</h5>
-  <h5>31.Avgust 2019. - Krajnji rok za dostavljanje rada.</h5>
+  <h4><b>30.Jul 2019. </b>- Krajnji rok za prijavu.</h4>
+  <h4><b>31.Avgust 2019. </b>- Krajnji rok za dostavljanje rada.</h4>
 </div>
