Zavrsena desktop verzija

--- a/src/app/CORE/header/header.component.css
+++ b/src/app/CORE/header/header.component.css
@@ -23,7 +23,7 @@ ngb-carousel {
   font-size: 2em;
   color:  greenyellow;
   text-align: center;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Permanent Marker', cursive;
 }
 
 .row>.natural {
