--- a/src/app/KMMNS/about-ns/about-ns.component.html
+++ b/src/app/KMMNS/about-ns/about-ns.component.html
@@ -1,3 +1,12 @@
-<p>
-  about-ns works!
-</p>
+<div class="container-fluid">
+  <h1>O Novom Sadu</h1>
+  <h4>
+      Novi Sad/Újvidék/Neusatz je već tri veka, koliko postoji pod tim imenima, prostor raznolikog, bogatog kulturnog nasleđa mnogih naroda koji u njemu zive. Materijalna i nematerijalna kulturna bastina stvarana u proslim vekovima osnov je na kome počiva interaktivna mreza naučnih i kulturnih institucija, sto Novi Sad danas čini prostorom aktivnog susreta kultura i različitih identiteta. Kreativna energija koju nose omladinske grupe i organizacije doprinela je da, uz već prepoznatljivu tradicionalnu kulturnu platformu, Novi Sad bude Evropska prestonica kulture 2021. i Omladinska prestonica Evrope 2019.
+<br>
+      Novi Sad je grad muzeja, galerija, manifestacija od kojih je muzički festival EXIT stekao internacionalna priznanja i neospornu prepoznatljivost. Svojim urbanim sredistem i ruralnim okruzenjem Novi Sad posetiocima nudi agendu neverovatne sadrzajnosti. U okolini urbanog gradskog jezgra koje obelezavaju barokne, neorenesansne, klasicističke i Bauhaus građevine, su izletista, očuvani eko sistemi i kompleks pravoslavnih manastira na prostoru Nacionalnog parka Fruska gora. Salasi, čarde i vinski putevi na obodima Novog Sada posetiocima pruzaju mogućnost da dozive svo bogatstvo gastronomije i seoskih običaja. Novi Sad, grad na Dunavu, grad evropske istorije I tradicije i balkanske gostoljubivosti je iskustvo koje vam nedostaje.
+      
+       <br><br>
+      
+      Dobro dosli!
+  </h4>
+</div>
