--- a/src/app/KMMNS/accommodation/accommodation.component.html
+++ b/src/app/KMMNS/accommodation/accommodation.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Smeštaj</h1>
+  <h1>Smestaj</h1>
   <h4>Za ograničeni broj učesnika konferencije, obezbedili smo besplatan smeštaj.<br>
   U prijavi je neophodno da navedete broj noćenja i izaberete datume za koje ste zainteresovani.<br>
   Više informacija o samom smeštaju biće objavljeno kada se bude znao tačan broj učesnika.<br>
