--- a/src/app/KMMNS/agenda/agenda.component.css
+++ b/src/app/KMMNS/agenda/agenda.component.css
@@ -9,6 +9,7 @@ h1{
     border-bottom: 2px solid #264d73;
     padding-bottom: .5em;
     text-align: center;
+    font-family: 'Permanent Marker', cursive;
 }
 i{
     font-size: 1.8em;
