--- a/src/app/KMMNS/contact/contact.component.html
+++ b/src/app/KMMNS/contact/contact.component.html
@@ -1,3 +1,19 @@
-<p>
-  contact works!
-</p>
+<div class="container-fluid">
+  <h1>Kontakt</h1>
+  <h2>Organizator konferencije:</h2>
+  <div class="logo">
+      <img src="./../../../assets/Images/beskonacno.jpg" alt="beskonacno"> SNMD, Srpsko naučno matematičko društvo
+    </div>
+    <div class="contact">
+      <h2>Osoba za kontakt:</h2>
+  <h5>Biljana Nedeljkov</h5>
+  <h5><i class="fa fa-envelope" aria-hidden="true"></i>  biljanaSANU1003@turing.mi.sanu.ac.rs<br>
+    <i class="fa fa-phone" aria-hidden="true"></i> 060-459-08-50
+  </h5>
+</div>
+<div class="location">
+<h2>Pronađite nas na mapi:</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2809.117782267556!2d19.850588315550116!3d45.24541097909889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475b100cd8cf5537%3A0x47dbefb4bb489d00!2z0J_RgNC40YDQvtC00L3Qvi3QvNCw0YLQtdC80LDRgtC40YfQutC4INGE0LDQutGD0LvRgtC10YIg0KPQvdC40LLQtdGA0LfQuNGC0LXRgtCwINGDINCd0L7QstC-0Lwg0KHQsNC00YM!5e0!3m2!1ssr!2srs!4v1560254443238!5m2!1ssr!2srs" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+
+</div>
