--- a/src/app/KMMNS/accommodation/accommodation.component.css
+++ b/src/app/KMMNS/accommodation/accommodation.component.css
@@ -11,6 +11,7 @@ h1{
     padding-bottom: .5em;
     grid-column: 1/5;
     text-align: center;
+    font-family: 'Permanent Marker', cursive;
 }
 
 h4{
