--- a/src/app/KMMNS/dates/dates.component.css
+++ b/src/app/KMMNS/dates/dates.component.css
@@ -9,4 +9,5 @@ h1{
     text-align: center;
     border-bottom: 2px solid #264d73;
     padding-bottom: .5em;
+    font-family: 'Permanent Marker', cursive;
 }
