--- a/src/app/KMMNS/registration/registration.component.css
+++ b/src/app/KMMNS/registration/registration.component.css
@@ -11,6 +11,7 @@ h1{
     padding-bottom: .5em;
     grid-column: 1/5;
     text-align: center;
+    font-family: 'Permanent Marker', cursive;
 }
 .btn{
     padding: .5em;
@@ -20,6 +21,7 @@ h1{
     display: grid;
     grid-row: 3/4;
     grid-column: 2/3;
+    font-family: 'Permanent Marker', cursive;
 }
 a :hover{
     background-color: greenyellow;
