--- a/src/app/KMMNS/committees/committees.component.html
+++ b/src/app/KMMNS/committees/committees.component.html
@@ -16,15 +16,15 @@
     <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
       ngbPopover="stručni saradnik za promociju i transfer znanja,  email: biljanaSANU1003@turing.mi.sanu.ac.rs  "
       popoverTitle="Matematički Institut, Beograd">
-      <h4>BSc Biljana Nedeljkov</h4>
+      <h4>Nedeljkov Biljana</h4>
     </button>
     <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
       ngbPopover="email: djurdjev.ivana@gmail.com" popoverTitle="Matematički Institut, Beograd">
-     <h4> MSc Đurđev Ivana</h4>
+     <h4> Đurđev Ivana</h4>
     </button>
     <button type="button" class="btn btn-outline-primary mr-2" placement="bottom"
       ngbPopover="email: danijela.mitrovic@dmi.uns.ac.rs" popoverTitle="Matematički Institut, Beograd">
-     <h4> MSc Mitrović Danijela</h4>
+     <h4> Mitrović Danijela</h4>
     </button>
   </div>
   <div class="program">
@@ -39,7 +39,7 @@
       <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Ognjanović Zoran, naučni savetnik</li>
       <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Krejić Nataša, redovni profesor</li>
       <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Dolićanin Ćemal, akademik</li>
-      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Marković Zoran, naučni savetnik</li>
+      <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Mihaljević Miodrag, naučni savetnik</li>
       <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Marija Stanić, vanredni profesor</li>
     </ul>
   </nav>
