--- a/src/app/KMMNS/contact/contact.component.css
+++ b/src/app/KMMNS/contact/contact.component.css
@@ -11,6 +11,9 @@ h1{
     padding-bottom: .5em;
     font-family: 'Permanent Marker', cursive;
 }
+h2{
+    margin-bottom: 1em;
+}
 .logo>img{
     width: 70px;
     border-radius: 50%;
@@ -30,4 +33,9 @@ h1{
 }
 .location>iframe {
 height: 60%;
+}
+@media (max-width: 767px) {
+    .logo{
+        font-size: 1.3em;
+    }
 }
