--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <kmmns-header></kmmns-header>
 <div class="row">
-  <div class="col-4">
+  <div class="sidenav">
   <kmmns-navbar></kmmns-navbar>
 </div>
-<div class="col-8">
+<div class="body">
   <router-outlet></router-outlet>
 </div>
 </div>
