--- a/src/app/KMMNS/agenda/agenda.component.html
+++ b/src/app/KMMNS/agenda/agenda.component.html
@@ -2,7 +2,8 @@
   <h1>Agenda - Program rada</h1>
   <i class="fa fa-angle-double-right" aria-hidden="true"> <b> 03.Oktobar 2019.</b></i>
   <ul>
-    <li> registracija učesnika od 12h na Departmanu za matematiku i informatiku, Prirodno-matematičkog fakulteta u Novom Sadu.</li>
+    <li> registracija učesnika od 12h na Departmanu za matematiku i informatiku, Prirodno-matematičkog fakulteta u Novom
+      Sadu.</li>
     <li> od 18h svečana večera</li>
   </ul>
   <i class="fa fa-angle-double-right" aria-hidden="true"> <b> 04.Oktobar 2019.</b> </i>
@@ -15,6 +16,6 @@
     <li> Od 9h sumiranje utisaka i završna reč organizatora.</li>
     <li> Zatvaranje konferencije u popodnevnim satima.</li>
   </ul><br><br>
-<h5>Tačna satnica i raspored izlaganja biće naknadno saopšteni.</h5>
+  <h5>Tačna satnica i raspored izlaganja biće naknadno saopšteni.</h5>
 
 </div>
