--- a/src/app/KMMNS/fee/fee.component.html
+++ b/src/app/KMMNS/fee/fee.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
   <h1>Kotizacija</h1>
-  <h4>Kotizacija se ne naplaćuje.</h4>
+  <h4>Kotizacija se ne naplaćuje, ali je prijava obavezna.</h4>
 </div>
