--- a/src/app/KMMNS/home/home.component.html
+++ b/src/app/KMMNS/home/home.component.html
@@ -3,14 +3,17 @@
     <img src="./../../../assets/Images/beskonacno.jpg" alt="beskonacno"> SNMD, Srpsko naučno matematičko društvo
   </div>
   <p>
-    Srpsko naučno matematičko društvo organizuje <b>Kongres mladih matematičara u Novom Sadu, od 03.-05. Oktobra 2019.</b>
-    Pravo učešća na konferenciji imaju mladi matematičari do 10 godina od završenog doktorata, kao i studenti doktorskih studija.
+    Srpsko naučno matematičko društvo organizuje <b>Kongres mladih matematičara u Novom Sadu, od 03.-05. Oktobra
+      2019.</b>
+    Pravo učešća na konferenciji imaju mladi matematičari do 10 godina od završenog doktorata, kao i studenti doktorskih
+    studija.
   </p>
   <p>
     Ideja SNMD-a je da ovim skupom poveže mlade istih ili sličnih interesovanja, da potakne komunikaciju među njima
     kao i razmenu ideja,a sve u cilju promocije matematike kao nauke i popularizacije među mladima. </p>
-    <p>
-    Konferencija će biti organizovana na  <b>Departmanu za matematiku i informatiku,Prirodno-matematičkog fakulteta u Novom Sadu.</b>
+  <p>
+    Konferencija će biti organizovana na <b>Departmanu za matematiku i informatiku,Prirodno-matematičkog fakulteta u
+      Novom Sadu.</b>
   </p>
   <p>
     Registracija za konferenciju je obavezna, ali se ne naplaćuje.
