--- a/src/app/KMMNS/privacy/privacy.component.html
+++ b/src/app/KMMNS/privacy/privacy.component.html
@@ -1,22 +1,32 @@
+<div class="container">
 <h2>Политика приватности података</h2>
 <p>
-  СНМД поштује приватност сваког посетиоца сајта. Будући да путем овог сајта прикупљамо одређене информације о корисницима, молимо вас да се упознате са нашим условима и начином на који обрађујемо те податке.
-    Информације које прикупљамо приликом регистровања за догађаје, слања фајлова на анализу, пријављивања на наше бести или кроз упитнике користимо за следеће: <br>
-    -Побољшање нашег сајта<br>
-    -Побољшање наших услуга<br>
-    -Слање е-маилова
-  </p>
-  <h2>Које личне податке прикупљамо?</h2>
-  <p>
-    СНМД организује догађаје (конференције, радионице...) за које је потребна регистрација. За потребе регистрације, преко форме на сајту коју сами попуњавате, прикупљају се следеће информације: ваше име, презиме, институција, титула, град, емаил адреса.
-      
-      Информације о вашој емаил адреси тражићемо и ако желите да вам пошаљемо детаљни извештај о фајловима које нам шаљете на анализу.
+  СНМД поштује приватност сваког посетиоца сајта. Будући да путем овог сајта прикупљамо одређене информације о
+  корисницима, молимо вас да се упознате са нашим условима и начином на који обрађујемо те податке.
+  Информације које прикупљамо приликом регистровања за догађаје, слања фајлова на анализу, пријављивања на наше бести
+  или кроз упитнике користимо за следеће: <br>
+  -Побољшање нашег сајта<br>
+  -Побољшање наших услуга<br>
+  -Слање е-маилова
+</p>
+<h2>Које личне податке прикупљамо?</h2>
+<p>
+  СНМД организује догађаје (конференције, радионице...) за које је потребна регистрација. За потребе регистрације, преко
+  форме на сајту коју сами попуњавате, прикупљају се следеће информације: ваше име, презиме, институција, титула, град,
+  емаил адреса.
 
-  </p>
-  <h2>Како обрађујемо ваше личне податке</h2>
-  <p>СНМД неће уступати Ваше личне податке, које добије приликом слања фајлова на анализу трећој страни беѕ Вашег пристанка.
-    У колико се пријављујете за догађај, уз ваш пристанак, ваши подаци ће бити подељени са партнерима, односно суорганизаторима догађаја.
-  </p>
-  <h2>Приступ личним подацима</h2>
-  <p>Ако желите да се детаљно информишете о начинима на који СНМД обрађује Ваше податке или желите да изменимо или избришемо ваше личне податке, контактирајте нас на snmd@turing.mi.sanu.ac.rs
-    </p>
+  Информације о вашој емаил адреси тражићемо и ако желите да вам пошаљемо детаљни извештај о фајловима које нам шаљете
+  на анализу.
+
+</p>
+<h2>Како обрађујемо ваше личне податке</h2>
+<p>СНМД неће уступати Ваше личне податке, које добије приликом слања фајлова на анализу трећој страни беѕ Вашег
+  пристанка.
+  У колико се пријављујете за догађај, уз ваш пристанак, ваши подаци ће бити подељени са партнерима, односно
+  суорганизаторима догађаја.
+</p>
+<h2>Приступ личним подацима</h2>
+<p>Ако желите да се детаљно информишете о начинима на који СНМД обрађује Ваше податке или желите да изменимо или
+  избришемо ваше личне податке, контактирајте нас на snmd@turing.mi.sanu.ac.rs
+</p>
+</div>
