--- a/src/app/KMMNS/terms/terms.component.html
+++ b/src/app/KMMNS/terms/terms.component.html
@@ -1,12 +1,20 @@
+<div class="container">
 <h2>Општи услови коришћења сајта</h2>
 <p>
-    Овај сајт је у власништву СНМД. Коришћење сајта подлежеправилима и условима коришћења. Молимо вас да се упознате са правилима и условима коришћења сајта, јер ће се сматрати да сте коришењем сајта иста прочитали и прихватили. Уколико не прихватите услове и правила коришћења сајта, молимо вас да сајт не користите.
+  Овај сајт је у власништву СНМД. Коришћење сајта подлежеправилима и условима коришћења. Молимо вас да се упознате са
+  правилима и условима коришћења сајта, јер ће се сматрати да сте коришењем сајта иста прочитали и прихватили. Уколико
+  не прихватите услове и правила коришћења сајта, молимо вас да сајт не користите.
 </p>
 <h3>Садржај сајта</h3>
 <p>
-    Овај сајт и његови делови имају информативну сврху, власник сајта не даје гаранције за тачност, примењивост и комплетност информација и неће бити одговоран за било које грешке или пропусте када је реч о информацијама. СНМД може да мења садржај на овом сајту у било које време и без упозорења.
+  Овај сајт и његови делови имају информативну сврху, власник сајта не даје гаранције за тачност, примењивост и
+  комплетност информација и неће бити одговоран за било које грешке или пропусте када је реч о информацијама. СНМД може
+  да мења садржај на овом сајту у било које време и без упозорења.
 </p>
 <h3>Линкови на друге сајтове</h3>
-<p>Линкови садржани на сајту који воде на независне сајтове су приказани искључиво због погодности за вас. СНМД не контролише садржај на овим сајтовима и није одговоран за било који од тих сајтова или њихове садржаје. СНМД не пружа никакве гаранције и не прихвата обавезе у вези са овим сајтовима или било којим информацијама, софтвером или другим производима који се тамо могу наћи , или са резултатима који су последица њихове употребе. Садржају са других сајтова на које воде линкови нашег сајта приступате на сопствену одговорност.</p>
-    
-    
+<p>Линкови садржани на сајту који воде на независне сајтове су приказани искључиво због погодности за вас. СНМД не
+  контролише садржај на овим сајтовима и није одговоран за било који од тих сајтова или њихове садржаје. СНМД не пружа
+  никакве гаранције и не прихвата обавезе у вези са овим сајтовима или било којим информацијама, софтвером или другим
+  производима који се тамо могу наћи , или са резултатима који су последица њихове употребе. Садржају са других сајтова
+  на које воде линкови нашег сајта приступате на сопствену одговорност.</p>
+</div>
