--- a/src/app/CORE/navbar/navbar.component.css
+++ b/src/app/CORE/navbar/navbar.component.css
@@ -13,16 +13,16 @@ a {
   color: white;
   font-size: 1.2em;
 }
-a:hover{
-    text-transform: uppercase;
-    color: greenyellow;
+
+a:hover {
+  text-transform: uppercase;
+  color: greenyellow;
 }
-@media (max-width: 767px){
-  .sidenav{
-    padding: 0;
-  }
-  li{
+
+@media (max-width: 767px) {
+  li {
     padding: 0;
     margin: 3px;
+    text-align: center;
   }
- }
+}
