--- a/src/app/KMMNS/accommodation/accommodation.component.css
+++ b/src/app/KMMNS/accommodation/accommodation.component.css
@@ -1,21 +1,22 @@
-.container-fluid{
-    color: #264d73;
-    padding: 2em;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4,1fr);
-}
-h1{
-    margin-bottom: 1em;
-    border-bottom: 2px solid #264d73;
-    padding-bottom: .5em;
-    grid-column: 1/5;
-    text-align: center;
-    font-family: 'Permanent Marker', cursive;
+.container-fluid {
+  color: #264d73;
+  padding: 2em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
-h4{
-    margin-bottom: 1em;
-    grid-column: 1/5;
-    grid-row: 2/5;
+h1 {
+  margin-bottom: 1em;
+  border-bottom: 2px solid #264d73;
+  padding-bottom: .5em;
+  grid-column: 1/5;
+  text-align: center;
+  font-family: 'Permanent Marker', cursive;
+}
+
+h4 {
+  margin-bottom: 1em;
+  grid-column: 1/5;
+  grid-row: 2/5;
 }
