--- a/src/app/KMMNS/committees/committees.component.html
+++ b/src/app/KMMNS/committees/committees.component.html
@@ -40,6 +40,7 @@
         <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Krejić Nataša, redovni profesor</li>
         <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Dolićanin Ćemal, akademik</li>
         <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Mihaljević Miodrag, naučni savetnik</li>
+        <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Ćirić Miroslav, redovni profesor</li>
         <li class="fa fa-angle-double-right" aria-hidden="true"> Dr Marija Stanić, vanredni profesor</li>
       </ul>
     </nav>
